package org.example.biblioteca;

public interface ItemMidiateca {
    String getId();
    String getTitulo();
}
